namespace FeedBack.Core.Models
{
    /// <summary>
    /// Question type enum
    /// </summary>
    public enum QType
    {
        Radio = 0,
        String,
        Combo,
        Range
    }
}