namespace FeedBack.Core.Models
{
    /// <summary>
    /// User role enum
    /// </summary>
    public enum Role
    {
        Admin = 0,
        User,
        Reviewer,
        Editor
    }
}