@startuml models

class IdentityModel {
  +ObjectId id
}

IdentityModel <|-- User
IdentityModel <|-- Employer
IdentityModel <|-- Candidate
IdentityModel <|-- Direction
IdentityModel <|-- PollAnswer
IdentityModel <|-- PollTemplate
IdentityModel <|-- Question
IdentityModel <|-- Answer


class User {
  .. Fields ..
  +string UserName
  +string HashedPassword
  +Role[] Roles
  .. Relations ..
  +ObjectId? Employer
}
User *-- Role
User --> Employer

class Employer {
  .. Fields ..
  +string Fio
  +string Department
  +TeamRole[] TeamRoles
  +string[] TeamsPriorityFirst
  +string[] TeamsPrioritySecond
  .. Relations ..
  +ObjectId? User
  +ObjectId? Candidate
}
Employer --> Candidate
Employer *-- TeamRole

class Candidate {
  .. Fields ..
  +string Name
  +string Position
  +string CVLink
}

class PollTemplate {
  .. Fields ..
  +string Title
  +bool isPrivate
  +bool isCandidatePoll
  +string PollType
  .. Relations ..
  +Question[] Questions
}
PollTemplate o-- Question

class Poll {
  .. Fields ..
  +DateTime StartDate
  +DateTime EndDate
  .. Relations ..
  +Question[] Questions
  ObjectId Owner
}
Poll o-- Question
PollTemplate <|-- Poll

class Question {
  .. Fields ..
  +string Title
  +string Description
  +QType Type
  +Dictionary<int, string> AnswerVariant
  +bool isRequired
  +bool isHasStringAddition
}
Question *-- QType

class PollAnswer {
  .. Fields ..
  +bool isVisibleToPollSubject
  .. Relations ..
  +ObjectId Answerer
  +ObjectId PollSubject
  +ObjectId Poll
  +QuestionAnswer[] Answers
}
PollAnswer o-- QuestionAnswer
PollAnswer --> Employer
PollAnswer --> Poll

class QuestionAnswer {
  .. Fields ..
  +string Answer
}
Question <|-- QuestionAnswer

class Direction {
  .. Fields ..
  +bool isComplete
  .. Relations ..
  +ObjectId Poll
  +ObjectId DirectedTo
}
Direction --> Employer
Direction --> Poll

enum QType {
  Radio
  String
  Combo
  Range
}

enum Role {
  Admin
  User
  Reviewer
  Editor
}

enum TeamRole {
  Developer
  Analytic
  ManualTester
  AutomationTester
  ProductOwner
  ScrumMaster
  TechnicalLead
  TeamLead
  ProjectManager
  Chief
}

@enduml